[project]
name = "slackdump2html"
version = "0.1.0"
description = ""
authors = [
    {name = "kununu",email = "you@example.com"},
    {name = "Jonathan Aceituno",email = "oin@users.noreply.github.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "emoji (>=2.14.1,<3.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
